<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtWelcomeMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_main_activity"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/plainTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tag_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_dark" />

        <EditText
            android:id="@+id/plainTextServerAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/tag_network_address"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_dark" />

        <Button
            android:id="@+id/btConnectServer"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/button_connect_network"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/txtServersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/textview_networks_list"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfgsdfsdfgsdfgsdgsdgsdfg"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>